--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <h3>Engineering</h3>
                 <h3>Student</h3>
             </div>
-            <a href="#" class="btn" data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="1000">See My Work</a>
+            <a href="#" class="btn" data-aos="zoom-out" data-aos-duration="1000" data-aos-delay="1000">See My History</a>
             <div class="media-icons">
               <a href="https://www.linkedin.com/in/singgih-lana-pratikna-9413a1223" target="_blank">
               <i class="ph ph-linkedin-logo"></i>
@@ -55,6 +55,9 @@
              </a>
               <a href="https://github.com/Singgihlana1" target="_blank">
               <i class="ph ph-github-logo"></i>
+             </a>
+             <a href="https://steamcommunity.com/profiles/76561199229599932/" target="_blank">
+              <i class="ph ph-steam-logo"></i>
              </a>
              </div>
         </div>
@@ -73,7 +76,7 @@
                 </div>
             </div>
             <div class="column col-right reveal">
-                <h2 class="content-title" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">Hey There! I am Singgih Lana Pratikna</h2>
+                <h2 class="content-title" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="200">Hi There! I am Singgih Lana Pratikna</h2>
                 <p class="paragraph-text" data-aos="flip-up" data-aos-duration="1000" data-aos-delay="400">I am a second-year Electrical Engineering student with a keen interest in automation engineering, electrical systems, and panel design. In addition to academic activities, I am active in the Electrical Engineering Student Association and currently work part-time as a barista. In my spare time, I use my time to learn technical software such as AutoCAD Electrical, ETAP, DIgSILENT and other software. I also enjoy fishing as a hobby to maintain balance and recharge my energy.</p>
                 <a href="#" class="btn" data-aos="zoom-out-left" data-aos-duration="1000" data-aos-delay="600">See more</a>
             </div>
@@ -323,4 +326,5 @@
 
     </script>
 </body>
+
 </html>
