--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
             </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
                 <div class="card-img">
-                    <img src="Image/foto6.JPG" alt="">
+                    <img src="Image/foto6.jpeg" alt="">
                 </div>
             </div>
         </div>
@@ -328,4 +328,5 @@
 </body>
 
 </html>
+
 
