--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 <section class="projects" id="projects">
     <div class="title">
-        <h2 class="section-title" data-aos="fade-up">activity</h2>
+        <h2 class="section-title" data-aos="fade-up">Activity</h2>
     </div>
 
     <div class="project-slider" data-aos="fade-up" data-aos-delay="200">
@@ -390,3 +390,4 @@ cards.forEach(card => {
 
 </body>
 </html>
+
