--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="media-icons">
             <a href="https://www.linkedin.com/" target="_blank"><i class="ph ph-linkedin-logo"></i></a>
             <a href="https://www.instagram.com/" target="_blank"><i class="ph ph-instagram-logo"></i></a>
-            <a href="https://github.com/" target="_blank"><i class="ph ph-github-logo"></i></a>
+            <!-- <a href="https://github.com/" target="_blank"><i class="ph ph-github-logo"></i></a> -->
             <a href="https://x.com/LanaSinggi665" target="_blank"><i class="ph ph-x-logo"></i> </a>
         </div>
     </div>
@@ -390,4 +390,5 @@ cards.forEach(card => {
 
 </body>
 </html>
+
 
