--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- ================= MAIN ================= -->
 <section class="main" id="main">
     <video autoplay muted loop playsinline class="bg-video">
-        <source src="image/mancing2.mp4" type="video/mp4">
+        <source src="image/BINDES.mp4" type="video/mp4">
     </video>
 
     <div class="content">
@@ -48,7 +48,7 @@
         <div class="media-icons">
             <a href="https://www.linkedin.com/" target="_blank"><i class="ph ph-linkedin-logo"></i></a>
             <a href="https://www.instagram.com/" target="_blank"><i class="ph ph-instagram-logo"></i></a>
-            <!-- <a href="https://github.com/" target="_blank"><i class="ph ph-github-logo"></i></a> -->
+            <!--<a href="https://github.com/" target="_blank"><i class="ph ph-github-logo"></i></a>-->
             <a href="https://x.com/LanaSinggi665" target="_blank"><i class="ph ph-x-logo"></i> </a>
         </div>
     </div>
@@ -124,7 +124,7 @@
 
     <div class="skills-container">
 
-        <div class="skill-card">
+        <div class="skill-card" data-aos="fade-up" data-aos-delay="100">
             <h3><i class="fas fa-globe"></i> Languages</h3>
             <hr>
             <ul>
@@ -133,7 +133,7 @@
             </ul>
         </div>
 
-        <div class="skill-card">
+        <div class="skill-card" data-aos="fade-up" data-aos-delay="100">
             <h3><i class="fas fa-users"></i> Soft Skills</h3>
             <hr>
             <ul>
@@ -144,7 +144,7 @@
             </ul>
         </div>
 
-        <div class="skill-card">
+        <div class="skill-card" data-aos="fade-up" data-aos-delay="100">
             <h3><i class="fas fa-cogs"></i> Hard Skills</h3>
             <hr>
             <ul>
@@ -182,7 +182,7 @@
                     <i class="ph ph-solar-panel"></i>
                 </div>
                 <div class="info">
-                    <h3>Village Development for PJU-TS Installation</h3>
+                    <h3>Village Development</h3>
                     <p>Assisting in the installation and repair of public street lighting in a village that still lacks public street lighting. </p>
                 </div>
             </div>
@@ -202,7 +202,7 @@
 
 <section class="projects" id="projects">
     <div class="title">
-        <h2 class="section-title" data-aos="fade-up">Activity</h2>
+        <h2 class="section-title" data-aos="fade-up">activity</h2>
     </div>
 
     <div class="project-slider" data-aos="fade-up" data-aos-delay="200">
@@ -390,5 +390,3 @@ cards.forEach(card => {
 
 </body>
 </html>
-
-
