--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <!-- ================= HEADER ================= -->
 <header>
    <nav class="navigation">
-    <a href="#main">Home</a>
-    <a href="#about">About</a>
-    <a href="#experience">Experiences</a>
-    <a href="#skill-page">Skills</a>
-    <a href="#services">Association</a>
-    <a href="#projects">Activity</a>
-    <a href="#work">Projects</a>
+    <a href="#main">Beranda</a>
+    <a href="#about">Tentang Saya</a>
+    <a href="#experience">Pengalaman</a>
+    <a href="#skill-page">Skil</a>
+    <a href="#services">Organisasi</a>
+    <a href="#projects">Aktivitas</a>
+    <a href="#work">Projek</a>
 </nav>
 
 </header>
@@ -35,20 +35,20 @@
     </video>
 
     <div class="content">
-        <h2 data-aos="fade-right">Hello, I'm <br><span>Singgih Lana Pratikna</span></h2>
+        <h2 data-aos="fade-right"><!----><br><span>Singgih Lana Pratikna</span></h2>
 
         <div class="animated-text" data-aos="fade-left">
-            <h3>Electrical</h3>
-            <h3>Engineering</h3>
-            <h3>Student</h3>
+            <h3>Mahasiswa</h3>
+            <h3>Teknik</h3>
+            <h3>Elektro</h3>
         </div>
 
-        <a href="#" class="btn" data-aos="zoom-out">See My History</a>
+        <a href="#" class="btn" data-aos="zoom-out">Lihat riwayat saya </a>
 
         <div class="media-icons">
             <a href="https://www.linkedin.com/" target="_blank"><i class="ph ph-linkedin-logo"></i></a>
             <a href="https://www.instagram.com/" target="_blank"><i class="ph ph-instagram-logo"></i></a>
-            <!--<a href="https://github.com/" target="_blank"><i class="ph ph-github-logo"></i></a>-->
+            <!-- <a href="https://github.com/" target="_blank"><i class="ph ph-github-logo"></i></a> -->
             <a href="https://x.com/LanaSinggi665" target="_blank"><i class="ph ph-x-logo"></i> </a>
         </div>
     </div>
@@ -57,7 +57,7 @@
 <!-- ================= ABOUT ================= -->
 <section class="about" id="about">
     <div class="title">
-        <h2 class="section-title" data-aos="fade-up">About Me</h2>
+        <h2 class="section-title" data-aos="fade-up">Tentang Saya</h2>
     </div>
 
     <div class="content">
@@ -68,11 +68,11 @@
         </div>
 
         <div class="column col-right" data-aos="fade-left">
-            <h2 class="content-title">Hi There! I am Singgih Lana Pratikna</h2>
+            <h2 class="content-title">Hi Teman! saya Singgih Lana Pratikna</h2>
            <p class="paragraph-text">
-                I am a second-year Electrical Engineering student with a keen interest in automation engineering, electrical systems, and panel design.
-                In addition to academic activities, I am active in the Electrical Engineering Student Association and currently work part-time as a barista. In my spare time,
-                I use my time to learn technical software such as AutoCAD Electrical, ETAP, DIgSILENT and other software.I also enjoy fishing as a hobby to maintain balance and recharge my energy.
+                Saya adalah mahasiswa Teknik Elektro tahun kedua dengan minat yang besar pada teknik otomasi, sistem kelistrikan, dan desain panel.
+                Selain kegiatan akademik, saya aktif di Himpunan Mahasiswa Teknik Elektro dan saat ini bekerja paruh waktu sebagai barista. Di waktu luang,
+                saya menggunakan waktu saya untuk mempelajari perangkat lunak teknis seperti AutoCAD Electrical, ETAP, DIgSILENT, dan perangkat lunak lainnya. Saya juga menikmati memancing sebagai hobi untuk menjaga keseimbangan dan mengisi kembali energi saya.
             </p> 
             <a href="#" class="btn">See more</a>
         </div>
@@ -82,7 +82,7 @@
 <!-- ================= EXPERIENCE ================= -->
 <section id="experience">
     <div class="title">
-        <h2 class="section-title">Experience</h2>
+        <h2 class="section-title">Pengalaman</h2>
     </div>
 
     <div class="experience-container">
@@ -95,8 +95,8 @@
             </div>
             <div class="col-right">
                 <h3>PT Communication Cable Systems Indonesia Tbk</h3>
-                <p>11 Month ~ Production Operator</p>
-                <p>My responsibilities included operating production machines, monitoring production data, determining output quantities, and assisting with machine maintenance and other production tasks</p>
+                <p>11 Bulan ~ Operator Produksi</p>
+                <p>Tanggung jawab saya meliputi mengoperasikan mesin produksi, memantau dan mencatat data produksi (bahan yang di gunakan), menentukan jumlah output, dan membantu perawatan mesin serta tugas-tugas produksi lainnya.</p>
             </div>
         </div>
 
@@ -108,8 +108,8 @@
             </div>
             <div class="col-right">
                 <h3>PT Sebastian Citra Indonesia (ROTI'O)</h3>
-                <p>7 Month ~ Baker & Barista</p>
-                <p>My responsibilities while working as a Baker & Barista at PT Sebastian Citra Indonesia (ROTI'O) include handling daily inventory accuracy, administrative planning for the next day's sales, customer service, as well as baking bread and making drinks.</p>
+                <p>7 Bulan ~ Baker & Barista</p>
+                <p>Tanggung jawab saya selama bekerja sebagai Baker & Barista di PT Sebastian Citra Indonesia (ROTI'O) yaitu menangani akurasi inventaris harian, perencanaan administratif untuk penjualan hari berikutnya, melayani pelanggan, serta memanggang roti dan membuat minuman..</p>
             </div>
         </div>
 
@@ -119,13 +119,13 @@
 <!-- ================= SKILLS ================= -->
 <section class="skill-page" id="skill-page">
     <div class="title">
-        <h2 class="section-title">Skills</h2>
+        <h2 class="section-title">Skil</h2>
     </div>
 
     <div class="skills-container">
 
         <div class="skill-card" data-aos="fade-up" data-aos-delay="100">
-            <h3><i class="fas fa-globe"></i> Languages</h3>
+            <h3><i class="fas fa-globe"></i> Bahasa</h3>
             <hr>
             <ul>
                 <li>English intermediate (Reading, Writing, Speaking)</li>
@@ -164,7 +164,7 @@
 
     <section class="services" id="services">
         <div class="title">
-            <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Association</h2>
+            <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Organisasi</h2>
             <p data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200"></p>
         </div>
         <div class="content">
@@ -173,8 +173,8 @@
                     <i class="ph ph-robot"></i>
                 </div>
                 <div class="info">
-                    <h3>Robotics class</h3>
-                    <p>Teaches basic theory and implementation of making a car robot using an Arduino-based Playstation controller. </p>
+                    <h3>KELAS ROBOTIC</h3>
+                    <p>Mengajarkan teori dasar dan implementasi pembuatan robot mobil menggunakan kontroler Playstation berbasis Arduino. </p>
                 </div>
             </div>
             <div class="card" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
@@ -182,8 +182,8 @@
                     <i class="ph ph-solar-panel"></i>
                 </div>
                 <div class="info">
-                    <h3>Village Development</h3>
-                    <p>Assisting in the installation and repair of public street lighting in a village that still lacks public street lighting. </p>
+                    <h3>BINA DESA</h3>
+                    <p>Memasang dan memperbaiki penerangan jalan umum di sebuah desa yang masih kekurangan penerangan jalan umum. </p>
                 </div>
             </div>
             <div class="card" data-aos="fade-left" data-aos-duration="1000" data-aos-delay="400">
@@ -191,18 +191,18 @@
                     <i class="ph ph-chalkboard-teacher"></i>
                 </div>
                 <div class="info">
-                    <h3>Initiation</h3>
-                    <p>Educating new electrical engineering students and providing basic theories of electrical engineering courses. </p>
+                    <h3>INISIASI</h3>
+                    <p>Acara ini bertujuan menciptakan transisi yang lancar dari lingkungan sekolah menengah ke lingkungan perguruan tinggi yang lebih mandiri dan kompleks, serta memastikan mahasiswa baru teknik elektro merasa diterima dan siap untuk memulai perjalanan akademik sebagai mahasiswa </p>
                 </div>
             </div>
         </div>
     </section>
 
-<!-- ================= MY PROJECT ================= -->
+<!-- ================= Activity ================= -->
 
 <section class="projects" id="projects">
     <div class="title">
-        <h2 class="section-title" data-aos="fade-up">activity</h2>
+        <h2 class="section-title" data-aos="fade-up">Aktivitas</h2>
     </div>
 
     <div class="project-slider" data-aos="fade-up" data-aos-delay="200">
@@ -240,7 +240,7 @@
 
             <!-- Project 7 -->
             <div class="project-card">
-                <img src="image/foto37.jpeg" alt="Project 7">
+                <img src="image/foto57.jpeg" alt="Project 7">
             </div>
 
             <!-- Project 8 -->
@@ -250,7 +250,7 @@
 
             <!-- Project 9 -->
             <div class="project-card">
-                <img src="image/foto39.jpeg" alt="Project 9">
+                <img src="image/foto59.jpeg" alt="Project 9">
             </div>
 
             <!-- Project 10 -->
@@ -317,7 +317,7 @@
 
     <section class="work" id="work">
         <div class="title">
-            <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Projects</h2>
+            <h2 class="section-title" data-aos="fade-up" data-aos-duration="1000">Projek</h2>
         </div>
         <div class="content">
             <div class="card" data-aos="fade-right" data-aos-duration="1000" data-aos-delay="200">
