--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <a href="#main">Beranda</a>
     <a href="#about">Tentang Saya</a>
     <a href="#experience">Pengalaman</a>
-    <a href="#skill-page">Skil</a>
+    <a href="#skill-page">Keterampilan</a>
     <a href="#services">Organisasi</a>
     <a href="#projects">Aktivitas</a>
     <a href="#work">Projek</a>
@@ -119,7 +119,7 @@
 <!-- ================= SKILLS ================= -->
 <section class="skill-page" id="skill-page">
     <div class="title">
-        <h2 class="section-title">Skil</h2>
+        <h2 class="section-title">Keterampilan</h2>
     </div>
 
     <div class="skills-container">
@@ -390,3 +390,4 @@ cards.forEach(card => {
 
 </body>
 </html>
+
