--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
 <!-- ================= HEADER ================= -->
 <header>
    <nav class="navigation">
-    <a href="#main">Beranda</a>
-    <a href="#about">Tentang Saya</a>
-    <a href="#experience">Pengalaman</a>
-    <a href="#skill-page">Keterampilan</a>
-    <a href="#services">Organisasi</a>
-    <a href="#projects">Aktivitas</a>
-    <a href="#work">Projek</a>
+    <a href="#main">Home</a>
+    <a href="#about">About</a>
+    <a href="#experience">Experience</a>
+    <a href="#skill-page">Skill</a>
+    <a href="#services">Association</a>
+    <a href="#projects">Acti</a>
+    <a href="#work">Project</a>
 </nav>
 
 </header>
@@ -119,7 +119,7 @@
 <!-- ================= SKILLS ================= -->
 <section class="skill-page" id="skill-page">
     <div class="title">
-        <h2 class="section-title">Keterampilan</h2>
+        <h2 class="section-title">Skil</h2>
     </div>
 
     <div class="skills-container">
@@ -390,4 +390,3 @@ cards.forEach(card => {
 
 </body>
 </html>
-
