--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="#experience">Experience</a>
     <a href="#skill-page">Skill</a>
     <a href="#services">Association</a>
-    <a href="#projects">Acti</a>
+    <a href="#projects">Activity</a>
     <a href="#work">Project</a>
 </nav>
 
@@ -119,7 +119,7 @@
 <!-- ================= SKILLS ================= -->
 <section class="skill-page" id="skill-page">
     <div class="title">
-        <h2 class="section-title">Skil</h2>
+        <h2 class="section-title">Keterampilan</h2>
     </div>
 
     <div class="skills-container">
@@ -390,3 +390,4 @@ cards.forEach(card => {
 
 </body>
 </html>
+
