--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
         <div class="column col-right" data-aos="fade-left">
             <h2 class="content-title">Hi Teman! saya Singgih Lana Pratikna</h2>
            <p class="paragraph-text">
-                Saya adalah mahasiswa Teknik Elektro tahun kedua dengan minat yang besar pada teknik otomasi, sistem kelistrikan, dan desain panel.
-                Selain kegiatan akademik, saya aktif di Himpunan Mahasiswa Teknik Elektro dan saat ini bekerja paruh waktu sebagai barista. Di waktu luang,
-                saya menggunakan waktu saya untuk mempelajari perangkat lunak teknis seperti AutoCAD Electrical, ETAP, DIgSILENT, dan perangkat lunak lainnya. Saya juga menikmati memancing sebagai hobi untuk menjaga keseimbangan dan mengisi kembali energi saya.
+                Saya adalah mahasiswa Teknik Elektro tahun kedua di Institut Teknologi Nasional Bandung dengan minat yang besar pada Sistem Instrumentasi, Sistem Kelistrikan , dan Desain Panel.
+                Selain kegiatan akademik, saya juga aktif di Himpunan Mahasiswa Elektro, Di waktu luang
+                saya menggunakan waktu saya untuk mempelajari perangkat lunak teknis seperti AutoCAD Electrical, ETAP, DIgSILENT, dan perangkat lunak lainnya. Dan serta menikmati memancing sebagai hobi untuk menjaga keseimbangan dan mengisi kembali energi saya.
             </p> 
             <a href="#" class="btn">See more</a>
         </div>
@@ -97,6 +97,13 @@
                 <h3>PT Communication Cable Systems Indonesia Tbk</h3>
                 <p>11 Bulan ~ Operator Produksi</p>
                 <p>Tanggung jawab saya meliputi mengoperasikan mesin produksi, memantau dan mencatat data produksi (bahan yang di gunakan), menentukan jumlah output, dan membantu perawatan mesin serta tugas-tugas produksi lainnya.</p>
+             <!-- LINK GOOGLE DRIVE -->
+            <a href="https://drive.google.com/file/d/1tYbCp5TvFaMhpeLiZcD-W68BsfvG1ygk/view"
+                class="experience-link"
+                target="_blank"
+                rel="noopener">
+                📄 Lihat Sertifikat
+                </a>
             </div>
         </div>
 
@@ -109,7 +116,14 @@
             <div class="col-right">
                 <h3>PT Sebastian Citra Indonesia (ROTI'O)</h3>
                 <p>7 Bulan ~ Baker & Barista</p>
-                <p>Tanggung jawab saya selama bekerja sebagai Baker & Barista di PT Sebastian Citra Indonesia (ROTI'O) yaitu menangani akurasi inventaris harian, perencanaan administratif untuk penjualan hari berikutnya, melayani pelanggan, serta memanggang roti dan membuat minuman..</p>
+                <p>Tanggung jawab saya meliputi menangani akurasi inventaris harian, perencanaan administratif untuk penjualan hari berikutnya, melayani pelanggan, serta memanggang roti dan membuat minuman..</p>
+            <!-- LINK GOOGLE DRIVE -->
+            <a href="https://drive.google.com/file/d/1ZLo7ZKBBMm6OvqtDdFO7UA0nZ2XQ_Bld/view"
+                class="experience-link"
+                target="_blank"
+                rel="noopener">
+                📄 Lihat Sertifikat
+                </a>
             </div>
         </div>
 
@@ -390,4 +404,3 @@ cards.forEach(card => {
 
 </body>
 </html>
-
